Added controller icon to index page and created product details page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div>
       <img src="images/controller.jpg" alt="Game controller picture">
       <h4>
-        <a href="product-detail.html">Game Controller</a>
+        <a href="product-detail.html">Game Controller</a> &#127918;
       </h4>
       <p>£9.99</p>
       <p>Awesome game controller
@@ -123,7 +123,7 @@
       </h4>
       <p>£99.99</p>
       <p>Every lense you will
-        <br>every need.
+        <br>every need (for camera models &lt;2017).
       </p>
       <a href="">More info</a>
       <a href="#">Add to cart</a>
