--- a/product-detail.html
+++ b/product-detail.html
@@ -1,1 +1,107 @@
-Product detail page
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Tech Store: Product Detail</title>
+</head>
+
+<body>
+
+  <!--
+    1. Create html page
+    2. Add css styling
+    3. Create nav pages
+    4. Push to GitHub
+   -->
+
+  <!-- menu -->
+  <header>
+    <h1>Tech Store</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">home</a>
+        </li>
+        <li>
+          <a href="#">shop</a>
+        </li>
+        <li>
+          <a href="contact.html">contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- sidebar -->
+  <div>
+    <section>
+      <h2>Shop by:</h2>
+      <h3>Category</h3>
+      <hr>
+      <ul>
+        <li>All items</li>
+        <li>Cameras</li>
+        <li>Laptops</li>
+        <li>Phones</li>
+        <li>Accessories</li>
+        <li>Other items</li>
+      </ul>
+    </section>
+
+    <section>
+      <h3>Price (£)</h3>
+      <hr>
+      <ul>
+        <li>0 - 9</li>
+        <li>10 - 29</li>
+        <li>30 - 59</li>
+        <li>60 - 99</li>
+        <li>100+</li>
+      </ul>
+    </section>
+  </div>
+  <!-- ends sidebar -->
+
+  <!-- main section to display products-->
+  <main>
+    <h2>Product Detail:</h2>
+    <div>
+      <img src="images/controller.jpg" alt="Game controller picture">
+      <h4>
+        <a href="product-detail.html">Game Controller</a> &#127918;
+      </h4>
+      <p>£9.99</p>
+      <p>Awesome game controller
+        <br> for xbox</p>
+      <a href="product-detail.html">More info</a>
+      <a href="#">Add to cart</a>
+    </div>
+  </main>
+  <!-- ends main content -->
+
+
+  <!-- footer -->
+  <footer>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">home</a>
+        </li>
+        <li>
+          <a href="#">shop</a>
+        </li>
+        <li>
+          <a href="contact.html">contact</a>
+        </li>
+      </ul>
+    </nav>
+  </footer>
+  <!-- end footer -->
+
+
+</body>
+
+</html>
