--- a/product-detail.html
+++ b/product-detail.html
@@ -82,6 +82,29 @@
   </main>
   <!-- ends main content -->
 
+  <table>
+    <caption>Buy in bulk and save</caption>
+    <thead>
+      <tr>
+        <th>Quantity</th>
+        <th>1</th>
+        <th>2-3</th>
+        <th>5-10</th>
+        <th>10+</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Price</td>
+        <td>79.95</td>
+        <td>78.95</td>
+        <td>76.92</td>
+        <td>74.95</td>
+      </tr>
+    </tbody>
+
+  </table>
+
 
   <!-- footer -->
   <footer>
