--- a/product-detail.html
+++ b/product-detail.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tech Store: Product Detail</title>
+  <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -26,13 +28,14 @@
           <a href="index.html">home</a>
         </li>
         <li>
-          <a href="#">shop</a>
+          <a href="product-detail.html">shop</a>
         </li>
         <li>
           <a href="contact.html">contact</a>
         </li>
       </ul>
     </nav>
+    <input type="search" placeholder="search...">
   </header>
 
   <!-- sidebar -->
