Added buttons class to index page and styling to buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </header>
 
   <!-- sidebar -->
-  <div>
+  <aside>
     <section>
       <h2>Shop by:</h2>
       <h3>Category</h3>
@@ -65,13 +65,13 @@
         <li>100+</li>
       </ul>
     </section>
-  </div>
+  </aside>
   <!-- ends sidebar -->
 
   <!-- main section to display products-->
   <main>
     <h2>All Items:</h2>
-    <div>
+    <div class="product">
       <img src="images/controller.jpg" alt="Game controller picture">
       <h4>
         <a href="product-detail.html">Game Controller</a> &#127918;
@@ -79,11 +79,11 @@
       <p>£9.99</p>
       <p>Awesome game controller
         <br> for xbox</p>
-      <a href="">More info</a>
-      <a href="#">Add to cart</a>
+      <a href="product-detail.html" class="button">More info</a>
+      <a href="#" class="button">Add to cart</a>
     </div>
 
-    <div>
+    <div class="product">
       <img src="images/camera.jpg" alt="Camera picture">
       <h4>
         <a href="">Canon camera</a>
@@ -91,11 +91,11 @@
       <p>£589.99</p>
       <p>Perfect camera
         <br>by Canon camera</p>
-      <a href="">More info</a>
-      <a href="#">Add to cart</a>
+      <a href="" class="button">More info</a>
+      <a href="#" class="button">Add to cart</a>
     </div>
 
-    <div>
+    <div class="product">
       <img src="images/headphones.jpg" alt="headphones picture">
       <h4>
         <a href="">White headphones</a>
@@ -103,11 +103,11 @@
       <p>£49.99</p>
       <p>Quality headphones
         <br>made by Sony</p>
-      <a href="">More info</a>
-      <a href="#">Add to cart</a>
+      <a href="" class="button">More info</a>
+      <a href="#" class="button">Add to cart</a>
     </div>
 
-    <div>
+    <div class="product">
       <img src="images/cables.jpg" alt="Cables picture">
       <h4>
         <a href="">Cables</a>
@@ -115,11 +115,11 @@
       <p>£10.95</p>
       <p>Top of range cables available
         <br>in different lenghts</p>
-      <a href="">More info</a>
-      <a href="#">Add to cart</a>
+      <a href="" class="button">More info</a>
+      <a href="#" class="button">Add to cart</a>
     </div>
 
-    <div>
+    <div class="product">
       <img src="images/lenses.jpg" alt="Camera lenses picture">
       <h4>
         <a href="">Camera lenses</a>
@@ -128,11 +128,11 @@
       <p>Every lense you will
         <br>every need (for camera models &lt;2017).
       </p>
-      <a href="">More info</a>
-      <a href="#">Add to cart</a>
+      <a href="" class="button">More info</a>
+      <a href="#" class="button">Add to cart</a>
     </div>
 
-    <div>
+    <div class="product">
       <img src="images/microphone.jpg" alt="Microphone picture">
       <h4>
         <a href="">Yeti microphone</a>
@@ -140,8 +140,8 @@
       <p>£110.95</p>
       <p>Awesome blue Yeti microphone
         <br>by Yeti Microphones</p>
-      <a href="">More info</a>
-      <a href="#">Add to cart</a>
+      <a href="" class="button">More info</a>
+      <a href="#" class="button">Add to cart</a>
     </div>
 
   </main>
