--- a/product-detail.html
+++ b/product-detail.html
@@ -39,7 +39,7 @@
   </header>
 
   <!-- sidebar -->
-  <div>
+  <div class="aside">
     <section>
       <h2>Shop by:</h2>
       <h3>Category</h3>
@@ -71,7 +71,7 @@
   <!-- main section to display products-->
   <main>
     <h2>Product Detail:</h2>
-    <div>
+    <div class="product">
       <img src="images/controller.jpg" alt="Game controller picture">
       <h4>
         <a href="product-detail.html">Game Controller</a> &#127918;
